--- a/Syncr/sync/templates/sync/index.html
+++ b/Syncr/sync/templates/sync/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://unpkg.com/htmx.org@2.0.4"></script>
 </head>
 <body>
     <h1>Working</h1>
+    <div hx-get="/test" hx-trigger="every 1s"></div>
 </body>
 </html>
