--- a/Syncr/sync/templates/sync/index.html
+++ b/Syncr/sync/templates/sync/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Working</h1>
+
+    <h2>Running Jobs</h2>
+    <div hx-get="{% url 'runningJobs' %}" hx-trigger="every 1s"></div>
 </body>
 </html>
