--- a/Syncr/sync/templates/sync/index.html
+++ b/Syncr/sync/templates/sync/index.html
@@ -1,18 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://unpkg.com/htmx.org@2.0.4"></script>
-</head>
-<body>
-    <h1>Working</h1>
+{% extends "base.html" %}
 
-    <h2>Running Jobs</h2>
-    <div hx-get="{% url 'runningJobs' %}" hx-trigger="every 5s, load"></div>
+{% block content %}
+<h2>Running Jobs</h2>
+<div hx-get="{% url 'runningJobs' %}" hx-trigger="every 5s, load"></div>
 
-    <h2>Finished Jobs</h2>
-    <div hx-get="{% url 'finishedJobs' %}" hx-trigger="every 5s, load"></div>
-</body>
-</html>
+<h2>Finished Jobs</h2>
+<div hx-get="{% url 'finishedJobs' %}" hx-trigger="every 5s, load"></div>
+{% endblock content %}
