--- a/Syncr/sync/templates/sync/ajax/runningJobs.html
+++ b/Syncr/sync/templates/sync/ajax/runningJobs.html
@@ -1,21 +1,44 @@
 {% load custom_filters %}
+
 {% if runningJobs.count < 1 %}
 <p>No jobs running</p>
 {% else %}
-<table>
-    <tr>
-        <th>ID</th>
-        <th>Elapsed Time</th>
-        <th>Speed</th>
-        <th>GB/Total GB</th>
-    </tr>
-    {% for job in runningJobs %}
-    <tr onclick="window.location='{% url 'detail' job.id %}'">
-        <td>{{job.id}}</td>
-        <td>{{job.elapsedTime}}</td>
-        <td>{{job.speed}}</td>
-        <td>{{ job.bytes|divide:1000000000|floatformat:2 }} / {{ job.totalBytes|divide:1000000000|floatformat:2 }}</td>
-    </tr>
-    {% endfor %}
-</table>
+<div class="relative overflow-x-auto">
+    <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+        <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+            <tr>
+                <th scope="col" class="px-6 py-3">
+                    ID
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Elapsed Time
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Speed
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    GB/Total GB
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for job in runningJobs %}
+            <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200">
+                <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                    {{job.id}}
+                </th>
+                <td class="px-6 py-4">
+                    {{job.elapsedTime}}
+                </td>
+                <td class="px-6 py-4">
+                    {{job.speed|divide:1000000|floatformat:2}} MB/s
+                </td>
+                <td class="px-6 py-4">
+                    {{ job.bytes|divide:1000000000|floatformat:2 }} / {{ job.totalBytes|divide:1000000000|floatformat:2 }} GB
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 {% endif %}
