--- a/Syncr/sync/templates/sync/index.html
+++ b/Syncr/sync/templates/sync/index.html
@@ -1,9 +1,55 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Running Jobs</h2>
-<div hx-get="{% url 'runningJobs' %}" hx-trigger="every 5s, load"></div>
-
-<h2>Finished Jobs</h2>
-<div hx-get="{% url 'finishedJobs' %}" hx-trigger="every 5s, load"></div>
+<div class="mx-auto p-2 max-w-7xl">
+    <div class="grid mb-8 border border-gray-200 rounded-lg shadow-xs dark:border-gray-700 md:mb-12 md:grid-cols-2 bg-white dark:bg-gray-800">
+        <figure class="flex flex-col items-center justify-center p-4 text-center bg-white border-b border-gray-200 rounded-t-lg md:rounded-t-none md:rounded-ss-lg md:border-e dark:bg-gray-800 dark:border-gray-700">
+            <blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-400">
+                <p class="my-2">Running Jobs</p>
+                <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Count</h3>
+            </blockquote>   
+        </figure>
+        <figure class="flex flex-col items-center justify-center p-4 text-center bg-white border-b border-gray-200 md:rounded-se-lg dark:bg-gray-800 dark:border-gray-700">
+            <blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-400">
+                <p class="my-2">Scheduled Jobs</p>
+                <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Count</h3>
+            </blockquote>  
+        </figure>
+        <figure class="flex flex-col items-center justify-center p-4 text-center bg-white border-b border-gray-200 md:rounded-es-lg md:border-b-0 md:border-e dark:bg-gray-800 dark:border-gray-700">
+            <blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-400">
+                <p class="my-2">Errored Jobs</p>
+                <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Count</h3>
+                <p class="my-2 flex items-center text-sm">
+                    <svg class="me-1.5 h-4 w-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11h2v5m-2 0h4m-2.592-8.5h.01M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                    </svg>
+                    Last 30 days
+                </p>
+            </blockquote>   
+        </figure>
+        <figure class="flex flex-col items-center justify-center p-4 text-center bg-white border-gray-200 rounded-b-lg md:rounded-se-lg dark:bg-gray-800 dark:border-gray-700">
+            <blockquote class="max-w-2xl mx-auto mb-4 text-gray-500 lg:mb-8 dark:text-gray-400">
+                <p class="my-2">Total bandwidth</p>
+                <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Count</h3>
+                <p class="my-2 flex items-center text-sm">
+                    <svg class="me-1.5 h-4 w-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11h2v5m-2 0h4m-2.592-8.5h.01M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                    </svg>
+                    Last 30 days
+                </p>
+            </blockquote> 
+        </figure>
+    </div>
+    
+    
+    <h2 class="text-2xl font-bold dark:text-gray-200">
+        Running Jobs
+    </h2>
+    <div hx-get="{% url 'sync:runningJobs' %}" hx-trigger="every 5s, load"></div>
+    
+    <h2 class="text-2xl font-bold dark:text-gray-200">
+        Finished Jobs
+    </h2>
+    <div hx-get="{% url 'sync:finishedJobs' %}" hx-trigger="every 5s, load"></div>
+</div>
 {% endblock content %}
