--- a/Syncr/sync/templates/sync/ajax/runningJobs.html
+++ b/Syncr/sync/templates/sync/ajax/runningJobs.html
@@ -1,7 +1,7 @@
 {% load custom_filters %}
 
 {% if runningJobs.count < 1 %}
-<p>No jobs running</p>
+<p class="text-gray-700 bg-gray-50 dark:bg-gray-700 dark:text-gray-400 p-2 max-w-fit">No jobs running, next schedule is in [INSERT TIME]</p>
 {% else %}
 <div class="relative overflow-x-auto">
     <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
