Feat. Schedules actually running when supossed
Feat. Functional Index View Stats

Feat. Better Finished/Running jobs tables

--- a/Syncr/sync/templates/sync/ajax/finishedJobs.html
+++ b/Syncr/sync/templates/sync/ajax/finishedJobs.html
@@ -49,10 +49,10 @@
                     {{job.task.type}}
                 </td>
                 <td class="px-6 py-4">
-                    {{job.task.srcFs.name}}
+                    {{job.task.srcFs.type}}:{{job.task.srcFs.name}}
                 </td>
                 <td class="px-6 py-4">
-                    {{job.task.dstFs.name}}
+                    {{job.task.dstFs.type}}:{{job.task.dstFs.name}}
                 </td>
                 <td class="px-6 py-4">
                     {{job.elapsedTime}}s
