--- a/Syncr/sync/templates/sync/ajax/runningJobs.html
+++ b/Syncr/sync/templates/sync/ajax/runningJobs.html
@@ -11,6 +11,15 @@
                     ID
                 </th>
                 <th scope="col" class="px-6 py-3">
+                    Type
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Source
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Destination
+                </th>
+                <th scope="col" class="px-6 py-3">
                     Duration
                 </th>
                 <th scope="col" class="px-6 py-3">
@@ -33,6 +42,15 @@
                 <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
                     {{job.id}}
                 </th>
+                <td class="px-6 py-4">
+                    {{job.task.type}}
+                </td>
+                <td class="px-6 py-4">
+                    {{job.task.srcFs.type}}:{{job.task.srcFs.name}}
+                </td>
+                <td class="px-6 py-4">
+                    {{job.task.dstFs.type}}:{{job.task.dstFs.name}}
+                </td>
                 <td class="px-6 py-4">
                     {{job.elapsedTime}}
                 </td>
