--- a/Syncr/sync/templates/sync/index.html
+++ b/Syncr/sync/templates/sync/index.html
@@ -2,52 +2,21 @@
 
 {% block content %}
 <div class="mx-auto p-2 max-w-7xl">
-    <div class="grid grid-cols-2 md:grid-cols-4 mb-8 gap-x-8 gap-y-8">
-        <figure class="flex flex-col items-center justify-center p-2 text-center bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
-            <blockquote class="mx-auto mb-2 text-gray-500 dark:text-gray-400">
-                <p class="my-2">Running Jobs</p>
-                <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Count</h3>
-            </blockquote>   
-        </figure>
-        <figure class="flex flex-col items-center justify-center p-2 text-center bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
-            <blockquote class="mx-auto mb-2 text-gray-500 dark:text-gray-400">
-                <p class="my-2">Scheduled Jobs</p>
-                <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Count</h3>
-            </blockquote>  
-        </figure>
-        <figure class="flex flex-col items-center justify-center p-2 text-center bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
-            <blockquote class="mx-auto mb-2 text-gray-500 dark:text-gray-400">
-                <p class="my-2">Errored Jobs</p>
-                <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Count</h3>
-                <p class="my-2 flex items-center text-sm">
-                    <svg class="me-1.5 h-4 w-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11h2v5m-2 0h4m-2.592-8.5h.01M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
-                    </svg>
-                    Last 30 days
-                </p>
-            </blockquote>   
-        </figure>
-        <figure class="flex flex-col items-center justify-center p-2 text-center bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
-            <blockquote class="mx-auto mb-2 text-gray-500 dark:text-gray-400">
-                <p class="my-2">Total Bandwidth</p>
-                <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Count</h3>
-                <p class="my-2 flex items-center text-sm">
-                    <svg class="me-1.5 h-4 w-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11h2v5m-2 0h4m-2.592-8.5h.01M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
-                    </svg>
-                    Last 30 days
-                </p>
-            </blockquote>   
-        </figure>
-    </div>
+    <div hx-get="{% url 'sync:indexStats' %}" hx-trigger="every 5s, load"></div>
     
-    
-    <h2 class="text-2xl font-bold dark:text-gray-200">
-        Running Jobs
+    <h2 class="flex justify-between items-center my-2">
+        <div>
+            <h1 class="text-2xl font-bold dark:text-gray-200">
+                Running Jobs
+            </h1>
+        </div>
+        <div>
+            <a href="{% url 'sync:runJob' %}" class="p-2 text-gray-900 dark:text-white bg-white border-b border-gray-200 dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-300 dark:hover:bg-gray-700">Run manual job</a>
+        </div>
     </h2>
     <div hx-get="{% url 'sync:runningJobs' %}" hx-trigger="every 5s, load"></div>
     
-    <h2 class="text-2xl font-bold dark:text-gray-200">
+    <h2 class="text-2xl font-bold dark:text-gray-200 my-2">
         Finished Jobs
     </h2>
     <div hx-get="{% url 'sync:finishedJobs' %}" hx-trigger="every 5s, load"></div>
