--- a/Syncr/templates/base.html
+++ b/Syncr/templates/base.html
@@ -86,7 +86,9 @@
     </div>
   </nav>  
 
-    {% block content %}{% endblock content %}
+    <div class="mx-auto p-2 max-w-7xl">
+        {% block content %}{% endblock content %}
+    </div>
 </body>
 {% block scripts_body %}{% endblock scripts_body %}
 </html>
