--- a/Syncr/sync/templates/sync/remoteCreate.html
+++ b/Syncr/sync/templates/sync/remoteCreate.html
@@ -1,11 +1,20 @@
 {% extends "base.html" %}
 
 {% block content %}
-<form action="" method="POST">
+<form action="" method="POST" class="max-w-sm mx-auto">
     {% csrf_token %}
-    {{ form.as_p }}
+    <div>
+        <label for="{{ form.type.id_for_label }}" class="block mb-2 text-gray-900 dark:text-white">{{ form.type.label }}</label>
+        {{ form.type }}
+    </div>
+    <div>
+        <label for="{{ form.name.id_for_label }}" class="block mb-2 text-gray-900 dark:text-white">{{ form.name.label }}</label>
+        {{ form.name }}
+    </div>
+
+    {{form.config}}
     <div id="dynamic-fields-container"></div>
-    <button type="submit">Submit</button>
+    <button type="submit" class="mt-2 hover:cursor-pointer text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">Submit</button>
 </form>
 {% endblock content %}
 
@@ -47,18 +56,21 @@ These scripts are before the content, in the head, but are placed here for conve
         }
 
         function addDynamicField(labelText, fieldName) {
+            const fieldContainer = document.createElement('div');
+
             const label = document.createElement('label');
             label.textContent = labelText;
-            label.classList.add('dynamic-field');
+            label.classList.add('dynamic-field', 'block', 'mb-2', 'text-gray-900', 'dark:text-white');
 
             const input = document.createElement('input');
             input.type = 'text';
             input.name = fieldName;
-            input.classList.add('dynamic-field');
+            input.classList.add('dynamic-field', 'bg-gray-50', 'border', 'border-gray-300', 'text-gray-900', 'text-sm', 'rounded-lg', 'focus:ring-blue-500', 'focus:border-blue-500', 'block', 'w-full', 'p-2.5', 'dark:bg-gray-700', 'dark:border-gray-600', 'dark:placeholder-gray-400', 'dark:text-white', 'dark:focus:ring-blue-500', 'dark:focus:border-blue-500');
             input.setAttribute('required', '');
 
-            dynamicFieldsContainer.appendChild(label);
-            dynamicFieldsContainer.appendChild(input);
+            fieldContainer.appendChild(label);
+            fieldContainer.appendChild(input);
+            dynamicFieldsContainer.appendChild(fieldContainer);
         }
 
         function serializeConfigField() {
