Feat. change the Task and Job Model for better handling of manual job creation
Task was renamed to schedule
Job now contains information about the remotes and type

--- a/Syncr/sync/templates/sync/ajax/runningJobs.html
+++ b/Syncr/sync/templates/sync/ajax/runningJobs.html
@@ -43,13 +43,13 @@
                     {{job.id}}
                 </th>
                 <td class="px-6 py-4">
-                    {{job.task.type}}
+                    {{job.type}}
                 </td>
                 <td class="px-6 py-4">
-                    {{job.task.srcFs.type}}:{{job.task.srcFs.name}}
+                    {{job.srcFs.type}}:{{job.srcFs.name}}
                 </td>
                 <td class="px-6 py-4">
-                    {{job.task.dstFs.type}}:{{job.task.dstFs.name}}
+                    {{job.dstFs.type}}:{{job.dstFs.name}}
                 </td>
                 <td class="px-6 py-4">
                     {{job.elapsedTime}}
