--- a/Syncr/sync/templates/sync/ajax/finishedJobs.html
+++ b/Syncr/sync/templates/sync/ajax/finishedJobs.html
@@ -14,6 +14,9 @@
                     Type
                 </th>
                 <th scope="col" class="px-6 py-3">
+                    Calee
+                </th>
+                <th scope="col" class="px-6 py-3">
                     Source
                 </th>
                 <th scope="col" class="px-6 py-3">
@@ -47,6 +50,13 @@
                 </th>
                 <td class="px-6 py-4">
                     {{job.type}}
+                </td>
+                <td class="px-6 py-4">
+                    {% if job.schedule %}
+                        {{job.schedule.name}}
+                    {% else %}
+                        Manual
+                    {% endif %}
                 </td>
                 <td class="px-6 py-4">
                     {{job.srcFs.type}}:{{job.srcFs.name}}
