Forgot to add the fs type

--- a/Syncr/sync/templates/sync/jobDetail.html
+++ b/Syncr/sync/templates/sync/jobDetail.html
@@ -17,10 +17,10 @@
 
             <div>
                 <h3 class="mb-2">Source: 
-                    <span class="text-lg font-semibold text-gray-900 dark:text-white">{{job.srcFs.name}}</span>
+                    <span class="text-lg font-semibold text-gray-900 dark:text-white">{{job.srcFs.type}}:{{job.srcFs.name}}</span>
                     <span class="text-lg font-semibold text-gray-900 dark:text-white">-></span>
                     Destination: 
-                    <span class="text-lg font-semibold text-gray-900 dark:text-white">{{job.dstFs.name}}</span>
+                    <span class="text-lg font-semibold text-gray-900 dark:text-white">{{job.dstFs.type}}:{{job.dstFs.name}}</span>
             </div>
 
             <div class="grid grid-cols-3 text-center">
