--- a/Syncr/sync/templates/sync/index.html
+++ b/Syncr/sync/templates/sync/index.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.js" integrity="sha512-ZwR1/gSZM3ai6vCdI+LVF1zSq/5HznD3ZSTk7kajkaj4D292NLuduDCO1c/NT8Id+jE58KYLKT7hXnbtryGmMg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 <div hx-get="{% url 'sync:indexStats' %}" hx-trigger="every 5s, load"></div>
+<div hx-get="{% url 'sync:indexStatsCharts' %}" hx-trigger="load"></div>
 
 <div class="flex justify-between items-center mt-2 dark:bg-gray-700 px-2">
     <div>
