--- a/Syncr/sync/templates/sync/ajax/indexStatsCharts.html
+++ b/Syncr/sync/templates/sync/ajax/indexStatsCharts.html
@@ -1,37 +1,154 @@
 <div>
     <div>
-        <canvas id="myChart"></canvas>
+        
     </div>
-    <script>
-        const chart1 = document.getElementById('myChart');
+</div>
 
-        new Chart(chart1, {
-          type: 'bar',
-          data: {
+<div>
+    <div>
+        
+    </div>
+</div>
+{% load custom_filters %}
+
+<div class="grid grid-cols-1 md:grid-cols-2 mb-4 gap-x-4 gap-y-4">
+    <figure class="flex flex-col items-center justify-center p-2 text-center bg-white border-b border-gray-200 dark:bg-gray-800 dark:border-gray-700">
+        <blockquote class="w-full mb-2 text-gray-500 dark:text-gray-400">
+            <canvas id="bytesChart"></canvas>
+        </blockquote>   
+    </figure>
+    <figure class="flex flex-col items-center justify-center p-2 text-center bg-white border-b border-gray-200 dark:bg-gray-800 dark:border-gray-700">
+        <blockquote class="w-full mb-2 text-gray-500 dark:text-gray-400">
+            <canvas id="jobsChart"></canvas>
+        </blockquote>  
+    </figure>
+</div>
+
+{% comment %} Scripts below {% endcomment %}
+<script>
+    const bytesChart = document.getElementById('bytesChart');
+
+    new Chart(bytesChart, {
+        type: 'line',
+        data: {
             labels: [
             {% for day in days %}
-            '{{day}}'
+            '{{ day }}'
             {% if not forloop.last %},{% endif %}
             {% endfor %}
             ],
             datasets: [{
-              label: '# of Votes',
-              data: [
-              {% for bytes in bandwidth %}
-              '{{bytes}}'
-              {% if not forloop.last %},{% endif %}
-              {% endfor %}
-              ],
-              borderWidth: 1
+                label: 'Gigabytes',
+                data: [
+                    {% for byte in bytes %}
+                    {{ byte }}
+                    {% if not forloop.last %},{% endif %}
+                    {% endfor %}
+                ],
+                borderWidth: 1
+            },
+            {
+                label: 'Server Side Copy Gigabytes',
+                data: [
+                    {% for byte in serverSideCopyBytes %}
+                    {{ byte }}
+                    {% if not forloop.last %},{% endif %}
+                    {% endfor %}
+                ],
+                borderWidth: 1
+            },
+            {
+                label: 'Server Side Move Gigabytes',
+                data: [
+                    {% for byte in serverSideMoveBytes %}
+                    {{ byte }}
+                    {% if not forloop.last %},{% endif %}
+                    {% endfor %}
+                ],
+                borderWidth: 1
             }]
-          },
-          options: {
+        },
+        options: {
             scales: {
-              y: {
-                beginAtZero: true
-              }
+                y: {
+                    stacked: true,
+                    ticks: {
+                        color: 'rgba(255, 255, 255, 1)', // Change y-axis text color
+                        callback: function(value) {
+                            return value + ' GB'; // Add "GB" to the y-axis labels
+                        }
+                    }
+                },
+                x: {
+                    ticks: {
+                        color: 'rgba(255, 255, 255, 1)' // Change x-axis text color
+                    }
+                }
+            },
+            plugins: {
+                legend: {
+                    labels: {
+                        color: 'rgba(255, 255, 255, 1)' // Change legend text color
+                    }
+                }
             }
-          }
-        });
-    </script>
-</div>
+        }
+    });
+</script>
+<script>
+    const jobsChart = document.getElementById('jobsChart');
+
+    new Chart(jobsChart, {
+        type: 'line',
+        data: {
+            labels: [
+            {% for day in days %}
+            '{{ day }}'
+            {% if not forloop.last %},{% endif %}
+            {% endfor %}
+            ],
+            datasets: [{
+                label: 'Jobs Run',
+                data: [
+                    {% for count in jobsRun %}
+                    {{ count }}
+                    {% if not forloop.last %},{% endif %}
+                    {% endfor %}
+                ],
+                borderWidth: 1
+            },
+            {
+                label: 'Errored Jobs',
+                data: [
+                    {% for count in jobsErrored %}
+                    {{ count }}
+                    {% if not forloop.last %},{% endif %}
+                    {% endfor %}
+                ],
+                borderWidth: 1
+            }]
+        },
+        options: {
+            scales: {
+                y: {
+                    stacked: true,
+                    ticks: {
+                        color: 'rgba(255, 255, 255, 1)' // Change y-axis text color
+                    }
+                },
+                x: {
+                    ticks: {
+                        color: 'rgba(255, 255, 255, 1)' // Change x-axis text color
+                    }
+                }
+            },
+            plugins: {
+                legend: {
+                    labels: {
+                        color: 'rgba(255, 255, 255, 1)' // Change legend text color
+                    }
+                }
+            }
+        }
+    });
+</script>
