--- a/Syncr/sync/templates/sync/jobDetail.html
+++ b/Syncr/sync/templates/sync/jobDetail.html
@@ -6,115 +6,10 @@
 <div class="my-4">
     <a href="{% url 'sync:index' %}" class="p-2 text-gray-900 dark:text-white bg-white border-b border-gray-200 dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-300 dark:hover:bg-gray-700">Back to Home</a>
 </div>
-{% if job.finished %}
-{% comment %} QUERY FROM THE DATABASE {% endcomment %}
-<div class="grid grid-cols-1 md:grid-cols-3 mb-4 gap-x-4 gap-y-4">
-    <figure class="col-span-3 flex flex-col p-2 bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
-        <blockquote class="mb-2 text-gray-500 dark:text-gray-400">
-            <div>
-                <h3 class="mb-2 text-lg font-semibold text-gray-900 dark:text-white">Job {{ job.id }} - {{ job.type }} - {{ job.schedule.name|default:"Manual" }} ({{ job.startTime|date:"d/m/y H:i" }})</h3>
-            </div>
 
-            <div>
-                <h3 class="mb-2">Source: 
-                    <span class="text-lg font-semibold text-gray-900 dark:text-white">{{job.srcFs.type}}:{{job.srcFs.name}}</span>
-                    <span class="text-lg font-semibold text-gray-900 dark:text-white">-></span>
-                    Destination: 
-                    <span class="text-lg font-semibold text-gray-900 dark:text-white">{{job.dstFs.type}}:{{job.dstFs.name}}</span>
-            </div>
-
-            <div class="grid grid-cols-3 text-center">
-                <div>
-                    <p class="mt-2">Status</p>
-
-                    <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-                        {% if job.finished %}
-                            {% if job.success %}
-                            Succesful
-                            {% else %}
-                            Failed
-                            {% endif %}
-                        {% else %}
-                        Running
-                        {% endif %}
-                    </h3>
-                </div>
-
-                <div class="text-center">
-                    <p class="mt-2">Bandwidth</p>
-                    <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-                        {% if jobs.bytes|default:'0' == job.totalBytes|default:'0' %}
-                        {{job.bytes|divide:1000000000|floatformat:2}}GB
-                        {% else %}
-                        {{job.bytes|divide:1000000000|floatformat:2}}/{{job.totalBytes|divide:1000000000|floatformat:2}}GB
-                        {% endif %}
-                    </h3>
-                    {% if job.serverSideCopyBytes != 0 %}
-                        <p class="text-sm text-gray-900 dark:text-white">Server-side copy: {{job.serverSideCopyBytes|divide:1000000000|floatformat:2}}GB</p>
-                    {% endif %}
-                    {% if job.serverSideMoveBytes != 0 %}
-                        <p class="text-sm text-gray-900 dark:text-white">Server-side move: {{job.serverSideMoveBytes|divide:1000000000|floatformat:2}}GB</p>
-                    {% endif %}
-                </div>
-
-                <div>
-                    <p class="mt-2">Timings</p>
-                    <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-                        {{ job.startTime|date:"d/m H:i" }} → {{ job.endTime|date:"H:i" }} ({{ job.duration|floatformat:1 }}s)
-                    </h3>
-                </div>
-            </div>
-        </blockquote>   
-    </figure>
-
-    <figure class="flex flex-col items-top p-2 text-center bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
-        <blockquote class="mx-auto mb-2 text-gray-500 dark:text-gray-400">
-            <p class="my-2">Transfers</p>
-            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-                {% if job.checks == job.totalChecks %}
-                Checks: {{job.checks}}
-                {% else %}
-                Checks: {{job.checks}} of {{job.totalChecks}}
-                {% endif %}
-            </h3>
-            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-                {% if job.transfers == job.totalTransfers %}
-                Transfers: {{job.transfers}}
-                {% else %}
-                Transfers: {{job.transfers}} of {{job.totalTransfers}}
-                {% endif %}
-            </h3>
-            {% if job.serverSideCopies != 0 %}
-                <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Server-side copies: {{job.serverSideCopies}}</h3>
-            {% endif %}
-            {% if job.serverSideMoves != 0 %}
-                <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Server-side moves: {{job.serverSideMoves}}</h3>
-            {% endif %}
-        </blockquote>   
-    </figure>
-    <figure class="flex flex-col items-top p-2 text-center bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
-        <blockquote class="mx-auto mb-2 text-gray-500 dark:text-gray-400">
-            <p class="my-2">Changes</p>
-            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Renames: {{job.renames}}</h3>
-            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Deletes: {{job.deletes}}</h3>
-            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Deleted dirs: {{job.deletedDirs}}</h3>
-        </blockquote>   
-    </figure>
-    <figure class="flex flex-col items-top p-2 text-center bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
-        <blockquote class="mx-auto mb-2 text-gray-500 dark:text-gray-400">
-            <p class="my-2">Errors</p>
-            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Errors: {{job.errors}}</h3>
-            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Fatal Error: {{job.fatalError}}</h3>
-            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">{{job.output}}</h3>
-        </blockquote>   
-    </figure>
-
-    <div>
-        <h1 class="dark:text-white">Cool graphs, many wows (TO-DO)</h1>
-    </div>
-</div>
+{% if isFinished %}
+<div hx-get="{% url 'sync:jobQuery' jobId %}" hx-trigger="load"></div>
 {% else %}
-{% comment %} QUERY FROM RCLONE {% endcomment %}
-<div hx-get="{% url 'jobQuery' job.id %}" hx-trigger="every 5s, load"></div>
+<div hx-get="{% url 'sync:jobQuery' jobId %}" hx-trigger="every 5s, load"></div>
 {% endif %}
 {% endblock content %}
