Change totalTransfers to transfers

--- a/Syncr/sync/templates/sync/ajax/runningJobs.html
+++ b/Syncr/sync/templates/sync/ajax/runningJobs.html
@@ -68,7 +68,7 @@
                     {{job.totalChecks}}
                 </td>
                 <td class="px-6 py-4">
-                    {{job.totalTransfers}}
+                    {{job.transfers}}
                 </td>
                 <td class="px-6 py-4">
                     {{job.speed|divide:1000000|floatformat:2}} MB/s
