Change totalChcks to checks

--- a/Syncr/sync/templates/sync/ajax/runningJobs.html
+++ b/Syncr/sync/templates/sync/ajax/runningJobs.html
@@ -65,7 +65,7 @@
                     {{job.elapsedTime}}
                 </td>
                 <td class="px-6 py-4">
-                    {{job.totalChecks}}
+                    {{job.checks}}
                 </td>
                 <td class="px-6 py-4">
                     {{job.transfers}}
