--- a/Syncr/sync/templates/sync/ajax/scheduleList.html
+++ b/Syncr/sync/templates/sync/ajax/scheduleList.html
@@ -21,16 +21,19 @@
                     Destination
                 </th>
                 <th scope="col" class="px-6 py-3">
-                    Edit/Delete
+                    Edit
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Delete
                 </th>
             </tr>
         </thead>
         <tbody>
             {% for schedule in schedules %}
             <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200">
-                <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                <td scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
                     {{schedule.name}}
-                </th>
+                </td>
                 <td class="px-6 py-4">
                     {{schedule.type}}
                 </td>
@@ -44,7 +47,13 @@
                     {{schedule.dstFs.name}}
                 </td>
                 <td class="px-6 py-4">
-                    TO-DO
+                    <a href="{% url 'sync:editSchedule' schedule.id %}">Edit</a>
+                </td>
+                <td class="px-6 py-4">
+                    <form action="{% url 'sync:deleteSchedule' schedule.id %}" method="POST">
+                        {% csrf_token %}
+                        <button class="hover:cursor-pointer">Delete</button>
+                    </form>
                 </td>
             </tr>
             {% endfor %}
