We got chart zooming!!!

--- a/Syncr/sync/templates/sync/ajax/jobQueryCharts.html
+++ b/Syncr/sync/templates/sync/ajax/jobQueryCharts.html
@@ -66,6 +66,19 @@
                     labels: {
                         color: 'rgba(255, 255, 255, 1)' // Change legend text color
                     }
+                },
+                zoom: {
+                    pan: {
+                        enabled: true,
+                        mode: 'x',
+                        modifierKey: 'ctrl',
+                    },
+                    zoom: {
+                        drag: {
+                            enabled: true
+                        },
+                        mode: 'x'
+                    }
                 }
             },
             animation: {
@@ -138,6 +151,19 @@
                 legend: {
                     labels: {
                         color: 'rgba(255, 255, 255, 1)' // Change legend text color
+                    }
+                },
+                zoom: {
+                    pan: {
+                        enabled: true,
+                        mode: 'x',
+                        modifierKey: 'ctrl',
+                    },
+                    zoom: {
+                        drag: {
+                            enabled: true
+                        },
+                        mode: 'x'
                     }
                 }
             },
