--- a/Syncr/sync/templates/sync/jobDetail.html
+++ b/Syncr/sync/templates/sync/jobDetail.html
@@ -1,8 +1,11 @@
 {% extends "base.html" %}
 {% load custom_filters %}
+{% load static %}
 
 {% block content %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.js" integrity="sha512-ZwR1/gSZM3ai6vCdI+LVF1zSq/5HznD3ZSTk7kajkaj4D292NLuduDCO1c/NT8Id+jE58KYLKT7hXnbtryGmMg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8"></script>
+<script src="{% static 'js/chartjs-plugin-zoom.js' %}"></script>
 
 <div class="my-4">
     <a href="{% url 'sync:index' %}" class="p-2 text-gray-900 dark:text-white bg-white border-b border-gray-200 dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-300 dark:hover:bg-gray-700">Back to Home</a>
@@ -18,12 +21,14 @@
     <figure class="flex flex-col items-center justify-center p-2 text-center bg-white border-b border-gray-200 dark:bg-gray-800 dark:border-gray-700">
         <blockquote class="w-full mb-2 text-gray-500 dark:text-gray-400">
             <canvas id="bytesChart"></canvas>
-        </blockquote>   
+        </blockquote>  
+        <button id="resetBytesZoom" class="mt-2 text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">Reset Zoom</button> 
     </figure>
     <figure class="flex flex-col items-center justify-center p-2 text-center bg-white border-b border-gray-200 dark:bg-gray-800 dark:border-gray-700">
         <blockquote class="w-full mb-2 text-gray-500 dark:text-gray-400">
             <canvas id="transfersChart"></canvas>
         </blockquote>  
+        <button id="resetTransfersZoom" class="mt-2 text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">Reset Zoom</button>
     </figure>
 </div>
 
@@ -50,6 +55,14 @@
             bytesChartElement = document.getElementById('bytesChart');
             transfersChartElement = document.getElementById('transfersChart');
         }
+
+        document.getElementById('resetTransfersZoom').addEventListener('click', function() {
+            transfersChart.resetZoom();
+        });
+
+        document.getElementById('resetBytesZoom').addEventListener('click', function() {
+            bytesChart.resetZoom();
+        });
     });
 </script>
 
