--- a/Syncr/sync/templates/sync/ajax/indexStatsCharts.html
+++ b/Syncr/sync/templates/sync/ajax/indexStatsCharts.html
@@ -1,34 +1,24 @@
-<div>
-    <div>
-        
-    </div>
-</div>
-
-<div>
-    <div>
-        
-    </div>
-</div>
 {% load custom_filters %}
 
 <div class="grid grid-cols-1 md:grid-cols-2 mb-4 gap-x-4 gap-y-4">
     <figure class="flex flex-col items-center justify-center p-2 text-center bg-white border-b border-gray-200 dark:bg-gray-800 dark:border-gray-700">
         <blockquote class="w-full mb-2 text-gray-500 dark:text-gray-400">
             <canvas id="bytesChart"></canvas>
-        </blockquote>   
+        </blockquote>
+        <button id="resetBytesZoom" class="mt-2 text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">Reset Zoom</button>
     </figure>
     <figure class="flex flex-col items-center justify-center p-2 text-center bg-white border-b border-gray-200 dark:bg-gray-800 dark:border-gray-700">
         <blockquote class="w-full mb-2 text-gray-500 dark:text-gray-400">
             <canvas id="jobsChart"></canvas>
-        </blockquote>  
+        </blockquote>
+        <button id="resetJobsZoom" class="mt-2 text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">Reset Zoom</button>
     </figure>
 </div>
 
 {% comment %} Scripts below {% endcomment %}
 <script>
     const bytesChart = document.getElementById('bytesChart');
-
-    new Chart(bytesChart, {
+    const bytesChartInstance = new Chart(bytesChart, {
         type: 'line',
         data: {
             labels: [
@@ -90,15 +80,31 @@
                     labels: {
                         color: 'rgba(255, 255, 255, 1)' // Change legend text color
                     }
+                },
+                zoom: {
+                    pan: {
+                        enabled: true,
+                        mode: 'x',
+                        modifierKey: 'ctrl',
+                    },
+                    zoom: {
+                        drag: {
+                            enabled: true
+                        },
+                        mode: 'x'
+                    }
                 }
             }
         }
     });
+
+    document.getElementById('resetBytesZoom').addEventListener('click', function() {
+        bytesChartInstance.resetZoom();
+    });
 </script>
 <script>
     const jobsChart = document.getElementById('jobsChart');
-
-    new Chart(jobsChart, {
+    const jobsChartInstance = new Chart(jobsChart, {
         type: 'line',
         data: {
             labels: [
@@ -147,8 +153,25 @@
                     labels: {
                         color: 'rgba(255, 255, 255, 1)' // Change legend text color
                     }
+                },
+                zoom: {
+                    pan: {
+                        enabled: true,
+                        mode: 'x',
+                        modifierKey: 'ctrl',
+                    },
+                    zoom: {
+                        drag: {
+                            enabled: true
+                        },
+                        mode: 'x'
+                    }
                 }
             }
         }
+    });
+
+    document.getElementById('resetJobsZoom').addEventListener('click', function() {
+        jobsChartInstance.resetZoom();
     });
 </script>
