Just some styling

--- a/Syncr/sync/templates/sync/ajax/remoteList.html
+++ b/Syncr/sync/templates/sync/ajax/remoteList.html
@@ -1,5 +1,5 @@
 {% if remotes.count < 1 %}
-<p>No remotes set</p>
+<p class="text-gray-700 bg-gray-50 dark:bg-gray-800 dark:text-gray-400 p-2 max-w-full">No remotes configured</p>
 {% else %}
 <div class="relative overflow-x-auto">
     <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
