--- a/Syncr/sync/templates/sync/ajax/scheduleList.html
+++ b/Syncr/sync/templates/sync/ajax/scheduleList.html
@@ -1,5 +1,5 @@
 {% if schedules.count < 1 %}
-<p>No schedules set</p>
+<p class="text-gray-700 bg-gray-50 dark:bg-gray-800 dark:text-gray-400 p-2 max-w-full">No schedules configured</p>
 {% else %}
 <div class="relative overflow-x-auto">
     <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
